* 0.11.0 (unreleased)
   * Fixed POI missions having markers say 'Point of Interest' instead of 'Sensor Anomaly'
   * Can only start to afterburn with enough energy for 0.5 seconds of afterburning
   * Updated meson.build to require SDL 2.0.26 which seems to be minimum supported version now
   * Translation updates

* 0.11.0-beta.3
   * Differentiated more significantly the energy / kinetic / plasma weapon types
   * Fixed hard crash when loading when approaching certain NPCs
   * Fixed crash when change tab triggers a takeoff
   * Fixed Naev not starting on Mac OS
   * Fixed beam collisions (again)
   * Fixed rare hard crash when beams are being fired
   * 'in range' option for weapon sets now takes into account weapon arcs
   * Buffed Targeting Conduit
   * Renamed 'Point of Interest' to 'Sensor Anomaly'
   * Double-tap activating outfits breaks stealth
   * Nerfed Sirius Fidelity so it can no longer get ludicrous levels of action speed
   * Map's discovery mode shows system features
   * Removed enemies from a certain hidden faction so the player won't have standing issues with them
   * Non-weapon outfits no longer show switch groups they are in as hot keys
   * Turn off weapon sets when changing type
   * Fixed toggle weapon sets not triggering outfits over and over as expected
   * Turn off all weapon sets when entering stealth
   * Fixed resizing not working on the background and toolkit in some cases
   * Added pilot.weapsetAddType and pilot.weapsetSetActive
   * Gave unicorp storm launchers a rarity of 2 and made it more available
   * Have ships be a little less spammy distressing
   * Centered tracking icon in slim GUI
   * Show tracking icons for non-turret bolt weapons too
   * More short names for weapon outfits
   * Fixed pilot.setSpeedLimit not working
   * Added tutorial message when player acquires first point defense weapon
   * `test_of_renewal`: fixed weapon set defaults being incorrect and increased enemy damage